@@ -1,3 +1,4 @@
+- fixed IOC-341 - IHandlerFilter returning empty array ignored
 - fixed IOC-338 - SerializationException thrown when using remoting within default lifetime scope (Failed to load expression host assembly. Details: Type '[...]CallContextLifetimeScope[...]' is not marked as serializable.)
 - fixed IOC-336 - Failing resolution of proxied components implementing multiple generic service interfaces
 - fixed IOC-332 - UsingFactoryMethod resolving a proxy without a target throws NullReferenceException instead of a better exception
